# llm-text-to-knowledge-graph

./: .gitignore  Makefile  pyproject.toml  requirements.txt
data/: style.cx2
docker/: Dockerfile  cyweb_bel_main.py
evaluation_tests_and_analysis/indra_vs_texttoKG_tests/: bel_similarity_output.csv  compare_with_llm.py  llm_comparison.ipynb
python_scripts/: bel_main.py  convert_to_cx2.py  cyweb_bel_main.py  get_interactions.py  hgnc_grounding.py  pub.py  sentence_level_extraction.py
tests/: test_convert_to_cx2.py
textToKnowledgeGraph/: bel_model.py  get_interactions.py  indra_download_extract.py  main.py  process_text_file.py  prompt_file_v7.txt  sentence_level_extraction.py
texttoKG_main_scripts/: cyweb_bel_main.py
